# pi_msg_arch_fram

./: .gitmodules  Dockerfile  README.md  start_service.sh
.devcontainer/: devcontainer.json
.github/workflows/: kvs_build.yml
proto_mpi_mongo_test/: CMakeLists.txt  Dockerfile  build.sh  mongo_log.txt  run_mongo_service.sh  run_test.sh
proto_mpi_mongo_test/.devcontainer/: devcontainer.json
proto_mpi_mongo_test/src/: ProtoMongoAPI.h  main.cpp  test_proto.pb.cc
proto_mpi_mongo_test/src/proto/: test_proto.pb.h  test_proto.proto
